--- a/.github/workflows/npm-test.yaml
+++ b/.github/workflows/npm-test.yaml
@@ -18,7 +18,8 @@ jobs:
           node-version: 14.x
       - uses: actions/cache@v2
         with:
-          path: **/node_modules
+          path: |
+            **/node_modules
           key: ${{ runner.os }}-node-${{ hashFiles("**/package-lock.json") }}
       - run: npm ci
       - run: npm test
